<resources>
    <string name="app_name">ArisanApps</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="hello">Hello there</string>
    <string name="create_a_groups">Create Group</string>
    <string name="active_group">Active groups</string>
    <string name="save">Save</string>
    <string name="add_member">Add Member</string>
    <string name="group_name">Group name</string>
    <string name="total_price">Total price</string>
    <string name="price_member">Price per-member</string>
    <string name="edit_group">Edit Group</string>
    <string name="delete">Delete</string>
    <string name="back">Kembali</string>
    <string name="repeat">Ulangi</string>
    <string name="call">Call</string>
    <string name="win">Already won</string>
    <string name="input_member">Input member</string>
    <string name="member">Member</string>
    <string name="vote">Vote</string>
    <string name="paid">Has paid</string>
    <string name="fail_input">Data tidak berhasil disimpan!</string>
    <string name="success_input">Data berhasil disimpan!</string>
    <string name="info_minim_member">Grup harus berisi minimal 1 member!</string>
    <string name="unpaid">Unpaid</string>
    <string name="valid_form">Form tidak boleh kosong!</string>
    <string name="money_collected">Money has collected</string>
    <string name="name_member">Name member</string>
    <string name="phone_member">Phone</string>
    <string-array name="typeArisan">
        <item>weekly</item>
        <item>monthly</item>
        <item>yearly</item>
    </string-array>
</resources>