<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arisan Title"
            style="@style/bold_18dp"
            android:textColor="@color/black_medium"
            />
        <CheckBox
            android:id="@+id/cbPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid"
            style="@style/reg_16dp"
            android:paddingStart="6dp"
            android:layout_marginTop="6dp"/>
        <CheckBox
            android:id="@+id/cbWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win"
            style="@style/reg_16dp"
            android:paddingStart="6dp"
            android:layout_marginTop="6dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="18dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/btnCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bold_12dp"
                    android:padding="10dp"
                    android:text="@string/call"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black_medium"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnSimpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    style="@style/reg_12dp"
                    android:text="@string/save"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>