<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.home.HomeActivity"
    android:fitsSystemWindows="true"
    android:background="@color/gray">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingBottom="10dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    style="@style/bold_18dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    style="@style/semibold_24dp"
                    android:layout_marginTop="20sp"
                    android:textColor="@color/black_medium"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    android:layout_marginTop="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">
                        <TextView
                            android:id="@+id/tvActiveGroups"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0 active groups"
                            style="@style/reg_12dp"/>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/semibold_16dp"
                            android:text="@string/create_a_groups"
                            android:layout_marginVertical="20dp"
                            android:backgroundTint="@color/green"
                            android:background="@drawable/bg_button"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingVertical="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/active_group"
                style="@style/semibold_16dp"
                android:textColor="@color/black_medium"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16sp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>