<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fitsSystemWindows="true"
    tools:context=".activity.detailGroup.DetailGroupActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_image"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Widget.AppCompat.Light.PopupMenu.Overflow"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="15dp">
                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_back_button"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_left_arrow"
                            />
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/tvTitlePage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/create_a_groups"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        style="@style/semibold_18dp"
                        android:textColor="@color/black_medium"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
                android:id="@+id/llDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_collected"
                    style="@style/bold_18dp"
                    android:textColor="@color/black_medium"/>
                <TextView
                    android:id="@+id/tvTotalMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_collected"
                    style="@style/reg_16dp"
                    android:textColor="@color/black_medium"
                    android:layout_marginTop="6dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_member"
                    style="@style/bold_18dp"
                    android:textColor="@color/black_medium"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/tvPriceMember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp. 100.000"
                    style="@style/reg_16dp"
                    android:textColor="@color/black_medium"
                    android:layout_marginTop="6dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member"
                    style="@style/bold_18dp"
                    android:textColor="@color/black_medium"
                    android:layout_marginTop="10dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvListMember"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        app:cardCornerRadius="15dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginVertical="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnEditGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_group"
                    style="@style/bold_12dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="16dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black_medium"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote"
                    style="@style/bold_12dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>