<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".activity.creategroup.CreateGroupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_back_button"
            android:padding="10dp"
            android:layout_marginStart="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_left_arrow"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/tvTitlePage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_a_groups"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            style="@style/reg_18dp"
            android:textColor="@color/black_medium"/>
        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            style="@style/bold_18dp"
            android:textColor="@color/green"/>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16sp"
            android:paddingHorizontal="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/btn_photo">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_camera"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Group name"
                        app:endIconMode="clear_text">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNameGroup"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gray"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/total_price"
                        app:endIconMode="clear_text"
                        android:layout_marginTop="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etTotalPrice"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gray"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price_member"
                        app:endIconMode="clear_text"
                        android:layout_marginTop="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPriceMember"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gray"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>